# pi5_os

./: Cargo.toml  LICENSE  Makefile  README.md  config.txt  kernel8.img  ldscript.lds
.cargo/: config.toml
src/: filesystem.rs  gpio.rs  interrupt.rs  ipc.rs  main.rs  mmu.rs  process.rs  shell.rs  signals.rs  startup.s  syscalls.rs  timer.rs  uart.rs  unix_commands.rs  users.rs
